--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,15 +147,17 @@ body {
   width: 100%;
   height: 100%;
   top: 0;
-  display: grid;
+  display: none;
   place-items: center;
   /* background-color: red; */
   position: absolute;
   /* hide modal */
   opacity: 0;
+
   z-index: -100;
 }
 .show-modal {
+  display: grid;
   opacity: 1;
   z-index: 100;
   background-color: rgba(0, 0, 100, 0.3);
