--- a/styles/styles.css
+++ b/styles/styles.css
@@ -144,9 +144,13 @@ body {
 }
 
 .modal-block {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  min-height: 100%; */
+
   top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: none;
   place-items: center;
   /* background-color: red; */
@@ -156,11 +160,12 @@ body {
 
   z-index: -100;
 }
-.show-modal {
+.show-modal-block {
   display: grid;
+
   opacity: 1;
   z-index: 100;
-  background-color: rgba(0, 0, 100, 0.3);
+  /* background-color: rgba(0, 0, 100, 0.3); */
 }
 .modal {
   border-radius: 20px;
@@ -170,6 +175,10 @@ body {
   text-align: center;
   padding-block: 2rem 3rem;
   position: relative;
+  display: none;
+}
+.show-modal {
+  display: block;
 }
 
 .modal h4 {
@@ -196,4 +205,12 @@ body {
   top: 10px;
   right: 10px;
   cursor: pointer;
+}
+
+.single-task-btns i {
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+.single-task-btns i:hover {
+  color: #222;
 }
